--- a/Backoffice/Pages/LiquidityEngine.razor
+++ b/Backoffice/Pages/LiquidityEngine.razor
@@ -3,10 +3,7 @@
 
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.MarketMaker)" aria-current="page" @onclick="SetMarketMaker" >Market Maker</button>
-    </li>
-    <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Hedger)" aria-current="page" @onclick="SetHedger" >Hedging</button>
+        <button class="nav-link @CheckActive(Menus.MarketMaker)" aria-current="page" @onclick="SetMarketMaker" >Engine</button>
     </li>
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Portfolio)" aria-current="page" @onclick="SetPortfolio" >Portfolio</button>
