--- a/Backoffice/Components/Liquidity/Portfolio/PortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/Portfolio/PortfolioComponent.razor
@@ -69,6 +69,7 @@
             <th>Side</th>
             <th>BaseVolume</th>
             <th>QuoteVolume</th>
+            <th>Result</th>
             <th>OpenTime</th>
             <th>CloseTime</th>
             <th>WalletId</th>
@@ -84,6 +85,7 @@
                 <td>@position.Side</td>
                 <td>@position.BaseVolume @position.BaseAsset</td>
                 <td><b>@position.QuoteVolume @position.QuotesAsset</b></td>
+                <td>@position.ResultPercentage %</td>
                 <td>@position.OpenTime</td>
                 <td>@position.CloseTime</td>
                 <td>@position.WalletId</td>
