--- a/Backoffice/Components/Liquidity/Market/LpOrderBookComponent.razor
+++ b/Backoffice/Components/Liquidity/Market/LpOrderBookComponent.razor
@@ -124,7 +124,7 @@
     [Parameter]
     public InstrumentLpSettings Provider { get; set; }
 
-    private bool IsRefresh { get; set; } = false;
+    private bool IsRefresh { get; set; } = true;
 
     private bool _isDispose = false;
 
