--- a/Backoffice/Components/Liquidity/Market/MarketMakerRowComponent.razor
+++ b/Backoffice/Components/Liquidity/Market/MarketMakerRowComponent.razor
@@ -45,7 +45,7 @@
         @Provider.Liquidity.ExternalSymbol
     </td>
     <td>
-        @Provider.Liquidity.Markup
+        @(Provider.Liquidity.Markup * 100) %
     </td>
     <td>
         @Provider.WalletName    
